--- a/index.html
+++ b/index.html
@@ -11,184 +11,147 @@
 <body>
   <div class="page">
     <header class="header">
-      <img class="logo logo_place_header" src="./images/logo_place_header.svg" alt="logo_yandex">
-      <div class="flex-column header_title__text">
-        <h1 class="header_title">Научиться учиться</h1>
-      </div> 
-      <div class="flex-column header_subtitle__text">
-        <p class="header_subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?<a href="#" class="header_link"> Узнать →</a></p>
-      </div>
-      <img src="images/header-image.png" alt="illustration_boy" class="header__main-illustration">
-      <div class="flex-column header__square-pic"></div>             
+      <img class="logo logo_place_header" src="./images/logo_place_header.svg" alt="логотип Яндекса">
+      <h1 class="flex-column header__title">Научиться учиться</h1>
+      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?<a href="#" class="header__link"> Узнать →</a></p>
+      <img src="images/header-image.png" alt="иллюстрация с мальчиком" class="header__main-illustration">
+      <div class="header__square-pic"></div>             
     </header>
 
     <main class="content">
       <section class="description">
         <div class="two-columns">
-          <div class="two-columns__brief">
-            <h3 class="brief_heading">Главные проблемы в обучении</h3>
-          </div>
-          <div class="two-columns__main-text">
-          <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. 
-          Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. 
-          Зубрежка быстро выветривается и не приносит пользы.</p>
-          <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод: </span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
-          <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. 
-          Эти же техники применяются на примере обучения в Практикуме.</p>
-          </div>
+          <h2 class="brief_heading">Главные проблемы в обучении</h2>
+            <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. 
+            Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. 
+            Зубрежка быстро выветривается и не приносит пользы.</p>
+            <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод: </span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+            <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. 
+            Эти же техники применяются на примере обучения в Практикуме.</p>
+            </div>
         </div>
       </section>
 
       <section class="digits">
-        <div class="digits-title">
-          <h2 class="digits-title__text">Цифры и факты</h2>
-        </div>
-        <div class="digits-subtitle">
-          <h3 class="digits-subtitle__text">Про учёбу и мозг</h3>
-        </div>
+          <h2 class="section-title">Цифры и факты</h2>
+          <h3 class="section-subtitle">Про учёбу и мозг</h3>
         <div class="table">
         <div class=" table__cell">
-          <h2 class="table__heading">86 миллиардов</h2>
+          <h4 class="table__heading">86 миллиардов</h4>
           <p class="table__text">Число нейронов в мозге человека</p>
         </div>
         <div class=" table__cell">
-          <h2 class="table__heading">2.1 миллиарда</h2>
+          <h4 class="table__heading">2.1 миллиарда</h4>
           <p class="table__text">Число нуждающихся в повышении квалификации</p>
           <p class="table__text">Всемирный Банк, 2017</p>
         </div>
         <div class=" table__cell">
-          <h2 class="table__heading">1000 терабайт</h2>
+          <h4 class="table__heading">1000 терабайт</h4>
           <p class="table__text">Объём памяти человека</p>
         </div>
         <div class=" table__cell">
-          <h2 class="table__heading">500 триллионов</h2>
+          <h4 class="table__heading">500 триллионов</h4>
           <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
         </div>
-        <div class=" table__cell table_second_row">
-          <h2 class="table__heading">420 миллионов</h2>
+        <div class=" table__cell">
+          <h4 class="table__heading">420 миллионов</h4>
           <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
-            <p class="table__text">Всемирный Банк, 2017</p>
+          <p class="table__text">Всемирный Банк, 2017</p>
         </div>
-        <div class=" table__cell table_second_row">
-          <h2 class="table__heading">17–20 лет</h2>
+        <div class=" table__cell">
+          <h4 class="table__heading">17–20 лет</h4>
           <p class="table__text">Пик обучаемости</p>
         </div>
-        <div class=" table__cell table_second_row">
-          <h2 class="table__heading">1885 год</h2>
+        <div class=" table__cell">
+          <h4 class="table__heading">1885 год</h4>
           <p class="table__text">Открытие кривой забывания</p>
         </div>
-        <div class=" table__cell table_second_row">
-          <h2 class="table__heading">1889 год</h2>
+        <div class=" table__cell">
+          <h4 class="table__heading">1889 год</h4>
           <p class="table__text">Открытие условного рефлекса</p>
         </div>
       </div>
       </section>
 
       <section class="feynman">
-        <div class="feynman__title_box">
         <h2 class="feynman__title">Метод Фейнмана</h2>
-        </div>
-        <div class="feynman__subtitle_box">
         <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
-        </div>
-        <img src="./images/feynman.png" alt="лицо Фейнмана" class="feynman__face_img">
-        <!--<a class="feynman__link link_btn" href="#">Подробнее →</a>
-        <a class="feynman__link link_btn" href="#">Подробнее &rarr;</a>!-->
+        <img src="./images/feynman.png" alt="лицо Фейнмана" class="feynman__face">
         <a class="feynman__link" href="#">Подробнее &rarr;</a>
       </section>
 
       <section class="kaufman">
-        <div class="kaufman-title_theme_dark">
-          <h2 class="kaufman-title__text_theme_dark">Принципы обучения</h2>
-        </div>
-        <div class="kaufman-subtitle_theme_dark">
-          <h3 class="kaufman-subtitle__text_theme_dark">от Джоша Кауфмана</h3>
-        </div>
-        <img src="./images/kaufman-triangle.svg" alt="синий треугольник" class="kaufman__triangle">
-        <div class="table_theme_dark">
-        <div class="table__cell_theme_dark">
-          <h2 class="table__heading_theme_dark">1</h2>
-          <p class="table__text_theme_dark">Выберите привлекательный проект.</p>
-        </div>
-        <div class="table__cell_theme_dark">
-          <h2 class="table__heading_theme_dark">2</h2>
-          <p class="table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
-        </div>
-        <div class="table__cell_theme_dark">
-          <h2 class="table__heading_theme_dark">3</h2>
-          <p class="table__text_theme_dark">Определите целевой уровень мастерства.</p>
-        </div>
-        <div class="table__cell_theme_dark">
-          <h2 class="table__heading_theme_dark">4</h2>
-          <p class="table__text_theme_dark">Разбейте навык на элементы.</p>
-        </div>
-        <div class="table__cell_theme_dark">
-          <h2 class="table__heading_theme_dark">5</h2>
-          <p class="table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
-        </div>
-        <div class="table__cell_theme_dark table_second_row">
-          <h2 class="table__heading_theme_dark">6</h2>
-          <p class="table__text_theme_dark">Устраните препятствия для занятий.</p>
-        </div>
-        <div class="table__cell_theme_dark table_second_row">
-          <h2 class="table__heading_theme_dark">7</h2>
-          <p class="table__text_theme_dark">Выделите специальное время для занятий.</p>
-        </div>
-        <div class="table__cell_theme_dark table_second_row">
-          <h2 class="table__heading_theme_dark">8</h2>
-          <p class="table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
-        </div>
-        <div class="table__cell_theme_dark table_second_row">
-          <h2 class="table__heading_theme_dark">9</h2>
-          <p class="table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
-        </div>
-        <div class="table__cell_theme_dark table_second_row">
-          <h2 class="table__heading_theme_dark">10</h2>
-          <p class="table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
-        </div>
+        <div class="kaufman__triangle"></div>
+          <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+          <h3 class="section-title section-subtitle_theme_dark">от Джоша Кауфмана</h3>
+        <div class="table table_theme_dark">
+          <div class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">1</h4>
+            <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">2</h4>
+            <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">3</h4>
+            <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">4</h4>
+            <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">5</h4>
+            <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">6</h4>
+            <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">7</h4>
+            <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">8</h4>
+            <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">9</h4>
+            <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">10</h4>
+            <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
+          </div>
       </div>
       </section>
     </main>
 
     <footer class="footer">
       <div class="footer__columns">
-        <div class="footer__column_content_copyright">
-          <div class="logo logo__place_footer">
-            <img class="logo__place_footer" src="./images/logo_place_footer.svg" alt="logo_yandex">
-          </div>
-          <div class="author">
-            <p class="footer__author">&copy2021. Бондаренко Артем</p>
-          </div>
+        <div class="footer-columns footer__column_content_copyright">
+            <img class="logo logo_place_footer" src="./images/logo_place_footer.svg" alt="Логотип Яндекса">
+            <p class="footer__author">&copy;2021. Бондаренко Артем</p>
         </div>
-        <div class="footer__column_content_info">
-          <div class="column-heading">
-            <h4 class="footer__column-heading_title">О Практикуме</h4>
+        <nav class="footer-columns footer__column_content_info">
+          <h4 class="footer__column-heading">О Практикуме</h4>
+          <div class="footer__column-links">
+            <a class="footer__column-link">Главная</a>
+            <a class="footer__column-link">Концепция</a>
+            <a class="footer__column-link">Наставники</a>
           </div>
-          <div class="column-links">
-            <p class="column-link">Главная</p>
-            <p class="column-link">Концепция</p>
-            <p class="column-link">Наставники</p>
-          </div>
-        </div>
-        <div class="footer__column_content_social">
-          <div>
-            <h4 class="footer__column-heading_title">Соцсети</h4>
-          </div>
-          <a href="https://ru-ru.facebook.com/" class="social-link">
-          <div class="social-icon">
-            <img src="./images/facebook_color_white.svg" class="social-icon__image">
-            <p class="column-link">Facebook</p>
-          </div></a>
-          <a href="https://vk.com/" class="social-link">
-          <div class="social-icon">
-            <img src="./images/vk_color_white.svg" class="social-icon__image">
-            <p class="column-link">Вконтакте</p>
-          </div></a>
-          <a href="https://www.instagram.com/" class="social-link">
-          <div class="social-icon">
-            <img src="./images/instagram_color_white.svg" class="social-icon__image">
-            <p class="column-link">Instagram</p>
-          </div></a>
+        </nav>
+        <div class="footer-columns footer__column_content_social">
+          <h4 class="footer__column-heading">Соцсети</h4>
+          <a href="https://ru-ru.facebook.com/" class="footer__column-link">
+          <img src="./images/facebook_color_white.svg" class="footer__social-icon" alt="логотип фейсбук">Facebook</a>
+          <a href="https://vk.com/" class="footer__column-link">
+          <img src="./images/vk_color_white.svg" class="footer__social-icon" alt="логотип вк">Вконтакте</a>
+          <a href="https://www.instagram.com/" class="footer__column-link">
+          <img src="./images/instagram_color_white.svg" class="footer__social-icon" alt="логотип инстаграм">Instagram</a>
         </div>
       </div>
     </footer>
