--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <main class="content">
       <section class="description">
         <div class="two-columns">
-          <h2 class="brief_heading">Главные проблемы в обучении</h2>
+          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
             <div class="two-columns__main-text">
             <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. 
             Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. 
@@ -132,11 +132,11 @@
 
     <footer class="footer">
       <div class="footer__columns">
-        <div class="footer-columns footer__column_content_copyright">
+        <div class="footer__column footer__column_content_copyright">
             <img class="logo logo_place_footer" src="./images/logo_place_footer.svg" alt="Логотип Яндекса">
             <p class="footer__author">&copy;2021. Бондаренко Артем</p>
         </div>
-        <nav class="footer-columns footer__column_content_info">
+        <nav class="footer__column footer__column_content_info">
           <h4 class="footer__column-heading">О Практикуме</h4>
           <div class="footer__column-links">
             <a class="footer__column-link">Главная</a>
@@ -144,7 +144,7 @@
             <a class="footer__column-link">Наставники</a>
           </div>
         </nav>
-        <div class="footer-columns footer__column_content_social">
+        <div class="footer__column footer__column_content_social">
           <h4 class="footer__column-heading">Соцсети</h4>
           <a href="https://ru-ru.facebook.com/" class="footer__column-link">
           <img src="./images/facebook_color_white.svg" class="footer__social-icon" alt="логотип фейсбук">Facebook</a>
