--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
-  <link rel="stylesheet" href="./styles/normalize.css">
-  <link rel="stylesheet" href="./styles/style.css">
+  <!--<link rel="stylesheet" href="./styles/normalize.css">
+  <link rel="stylesheet" href="./styles/style.css">!-->
+  <link rel="stylesheet" href="pages/index.css">
 </head>
 
-<body>
-  <div class="page">
+<body class="page">
     <header class="header">
       <img class="logo logo_place_header" src="./images/logo_place_header.svg" alt="логотип Яндекса">
       <h1 class="flex-column header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?<a href="#" class="header__link"> Узнать →</a></p>
       <img src="images/header-image.png" alt="иллюстрация с мальчиком" class="header__main-illustration">
-      <div class="header__square-pic"></div>             
+      <div class="header__square-pic rotation"></div>             
     </header>
 
     <main class="content">
@@ -31,6 +31,65 @@
             Эти же техники применяются на примере обучения в Практикуме.</p>
             </div>
         </div>
+      </section>
+
+      <section class="techniques">
+        <h2 class="section-title">Техники обучения</h2>
+        <h3 class="section-subtitle">Пять практик от Барбары Оакли</h3>
+        <div class="cards">
+          <div class="cards__item">
+            <img src="./images/cards-attention.png" alt="обложка книги" class="cards__image">
+            <h4 class="cards__title">Два вида внимания</h4>
+            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+          </div>
+          <div class="cards__item">
+            <img src="./images/cards-recall.png" alt="статуя" class="cards__image">
+            <h4 class="cards__title">Recall</h4>
+            <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+          </div>
+          <div class="cards__item">
+            <img src="./images/cards-interliving.png" alt="архитектура" class="cards__image">
+            <h4 class="cards__title">Интерливинг</h4>
+            <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+          </div>
+          <div class="cards__item">
+            <img src="./images/cards-question.png" alt="инсталяция" class="cards__image">
+            <h4 class="cards__title">Вопросы</h4>
+            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+          </div>
+          <div class="cards__item">
+            <img src="./images/cards-competence.png" alt="книги" class="cards__image">
+            <h4 class="cards__title">Иллюзия компетентности</h4>
+            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+          </div>
+        </div>
+      </section>
+
+      <section class="video">
+        <h2 class="section-title">Видео нa TED</h2>
+        <h3 class="section-subtitle">Для тех, кто любит прокрастинировать</h3>
+        <div class="video__iframes">
+          <iframe class="video__iframe" width="516" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
+          <iframe class="video__iframe" width="516" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+      </section>
+
+      <section class="oakley">
+        <div class="two-columns">
+          <h2 class="two-columns__brief">История Барбары Оакли.</h2>
+            <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным. 
+            В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. 
+            И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.</p>
+            </div>
+        </div>
+      </section>
+
+      <section class="feynman">
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
+        <img src="./images/feynman.png" alt="лицо Фейнмана" class="feynman__face">
+        <a class="feynman__link" href="#">Подробнее &rarr;</a>
       </section>
 
       <section class="digits">
@@ -74,15 +133,24 @@
       </div>
       </section>
 
-      <section class="feynman">
-        <h2 class="feynman__title">Метод Фейнмана</h2>
-        <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
-        <img src="./images/feynman.png" alt="лицо Фейнмана" class="feynman__face">
-        <a class="feynman__link" href="#">Подробнее &rarr;</a>
+      <section class="khan">
+        <div class="khan__container">
+          <h3 class="khan__author">Салман Хан</h3>
+          <h2 class="khan__title">Весь мир — школа</h2>
+          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. 
+          Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить 
+          навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+          <h2 class="khan__quote-author">Джордж Лукас</h2>
+          <h3 class="khan__quote-author-subline">Кинорежиссер, продюсер</h3>
+          <div class="khan__book-container">
+            <div class="khan__book-pic"></div>
+            <a class="khan__buy-link" href="#">Купить книгу &rarr;</a>
+          </div>
+        </div>
       </section>
 
       <section class="kaufman">
-        <div class="kaufman__triangle"></div>
+        <div class="kaufman__triangle rotation"></div>
           <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
           <h3 class="section-title section-subtitle_theme_dark">от Джоша Кауфмана</h3>
         <div class="table table_theme_dark">
@@ -128,6 +196,17 @@
           </div>
       </div>
       </section>
+    
+      <section class="resources">
+        <h2 class="section-title">Полезные ресурсы</h2>
+        <h3 class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</h3>
+        <div class="resources__logo-zone">
+          <a href="#" target="_blank" class="resources__logo resources__logo-arzamas" alt="логотип арзамас"></a>
+          <a href="#" target="_blank" class="resources__logo resources__logo-n1" alt="логотип н+1"></a>
+          <a href="#" target="_blank" class="resources__logo resources__logo-strelka" alt="логотип стрелка"></a>
+          <a href="#" target="_blank" class="resources__logo resources__logo-polka" alt="логотип полка"></a>
+        </div>
+      </section>
     </main>
 
     <footer class="footer">
@@ -139,9 +218,9 @@
         <nav class="footer__column footer__column_content_info">
           <h4 class="footer__column-heading">О Практикуме</h4>
           <div class="footer__column-links">
-            <a class="footer__column-link">Главная</a>
-            <a class="footer__column-link">Концепция</a>
-            <a class="footer__column-link">Наставники</a>
+            <a class="footer__column-link" href="#">Главная</a>
+            <a class="footer__column-link" href="#">Концепция</a>
+            <a class="footer__column-link" href="#">Наставники</a>
           </div>
         </nav>
         <div class="footer__column footer__column_content_social">
@@ -155,6 +234,5 @@
         </div>
       </div>
     </footer>
-  </div>
 </body>
 </html>
