--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
         <h2 class="section-title">Видео нa TED</h2>
         <h3 class="section-subtitle">Для тех, кто любит прокрастинировать</h3>
         <div class="video__iframes">
-          <iframe class="video__iframe" width="516" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
-          <iframe class="video__iframe" width="516" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe class="video__iframe" width="516" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
+          <iframe class="video__iframe" width="516" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </section>
 
@@ -201,10 +201,10 @@
         <h2 class="section-title">Полезные ресурсы</h2>
         <h3 class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</h3>
         <div class="resources__logo-zone">
-          <a href="#" target="_blank" class="resources__logo resources__logo-arzamas" alt="логотип арзамас"></a>
-          <a href="#" target="_blank" class="resources__logo resources__logo-n1" alt="логотип н+1"></a>
-          <a href="#" target="_blank" class="resources__logo resources__logo-strelka" alt="логотип стрелка"></a>
-          <a href="#" target="_blank" class="resources__logo resources__logo-polka" alt="логотип полка"></a>
+          <a href="#" target="_blank" class="resources__logo resources__logo-arzamas"></a>
+          <a href="#" target="_blank" class="resources__logo resources__logo-n1"></a>
+          <a href="#" target="_blank" class="resources__logo resources__logo-strelka"></a>
+          <a href="#" target="_blank" class="resources__logo resources__logo-polka"></a>
         </div>
       </section>
     </main>
